<resources>
    <string name="web_client_id">991427386007-eulrm75qm0tllc7krenb016oriqc2lge.apps.googleusercontent.com</string>
    <string name="google_api_key">AIzaSyD8z2RpVAmyYl860rMlj3BvNBDnLZzUewM</string>
    <string name="app_name">AppartmentBlog</string>
    <string name="app_logo">App logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="login_with_google">Login with Google</string>
    <string name="feed">Feed</string>
    <string name="map">Map</string>
    <string name="account">Account</string>
    <string name="add_apartment">Add new apartment</string>
    <string name="apartment_image_content_description">Apartment Image</string>
    <string name="pick_image_button">Pick Image</string>
    <string name="title_edit_text_hint">Title</string>
    <string name="content_edit_text_hint">Description</string>
    <string name="save_button_text">Save</string>
    <string name="from_gallery">From gallery</string>
    <string name="from_camera">From camera</string>
    <string name="logout">Logout</string>
    <string name="price">Price</string>
    <string name="floor">Floor</string>
    <string name="update_time">Update Time</string>
    <string name="update_post">Update Post</string>
    <string name="edit_floor">Edit Floor</string>
    <string name="edit_rooms">Edit Rooms</string>
    <string name="rooms">Rooms</string>
    <string name="edit_price">Edit Price</string>
    <string name="edit_content">Edit Content</string>
    <string name="content">Content</string>
    <string name="edit_title">Edit Title</string>
    <string name="title">Title</string>
    <string name="aparttment_image">apparttment</string>
    <string name="save">Save</string>
    <string name="address">Address</string>
    <string name="delete_post">Delete Post</string>
    <string name="username">Username</string>
    <string name="comment">Comment</string>
    <string name="subtitle_for_comments">What do you think?</string>
    <string name="add_review">Add Review</string>
    <string name="review">Review</string>
    <string name="rating">Rating</string>
    <string name="gemini_api_key">AIzaSyBCEHp-I_N_BcXVxenFA8rLV-UC2Pmd22A</string>
</resources>