<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/feedFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Filter Section -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filterSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Price Cube -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/priceCube"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toStartOf="@id/roomsCube"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.25">

            <View
                android:id="@+id/priceCubeView"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:background="@drawable/rounded_oval"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/priceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/price"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/priceCubeCancel"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/cancel_icon"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Rooms Cube -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/roomsCube"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toStartOf="@id/floorCube"
            app:layout_constraintStart_toEndOf="@id/priceCube"
            app:layout_constraintWidth_percent="0.25">

            <View
                android:id="@+id/roomsCubeView"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:background="@drawable/rounded_oval"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/roomsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/rooms"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/roomsCubeCancel"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/cancel_icon"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Floor Cube -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/floorCube"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/roomsCube"
            app:layout_constraintWidth_percent="0.25">

            <View
                android:id="@+id/floorCubeView"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:background="@drawable/rounded_oval"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/floorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/floor"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/floorCubeCancel"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/cancel_icon"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Sliders Section -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/slidersSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@id/filterSection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Price Slider -->
        <com.google.android.material.slider.RangeSlider
            android:id="@+id/priceRangeSlider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:valueFrom="0"
            android:valueTo="1000000"
            android:stepSize="500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/roomsRangeSlider"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.30" />

        <!-- Rooms Slider -->
        <com.google.android.material.slider.RangeSlider
            android:id="@+id/roomsRangeSlider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:valueFrom="1"
            android:valueTo="20"
            android:stepSize="1"
            app:layout_constraintStart_toEndOf="@id/priceRangeSlider"
            app:layout_constraintEnd_toStartOf="@id/floorRangeSlider"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.30" />

        <!-- Floor Slider -->
        <com.google.android.material.slider.RangeSlider
            android:id="@+id/floorRangeSlider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:stepSize="1"
            android:valueFrom="0"
            android:valueTo="50"
            app:layout_constraintStart_toEndOf="@id/roomsRangeSlider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.30" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/posts_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/slidersSection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
